--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -24,17 +24,40 @@ name = "scss"
 formatter = { command = 'prettier', args = ["--parser", "scss"] }
 
 [[language]]
-name = "jsx"
+name = "javascript"
+# language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 
 [[language]]
-name = "javascript"
+name = "jsx"
+# language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 
 [[language]]
 name = "tsx"
+# language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 
 [[language]]
 name = "typescript"
+# language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
+
+[language-server.eslint]
+args = ["--stdio"]
+command = "vscode-eslint-language-server"
+
+[language-server.eslint.config]
+format = false
+nodePath = ""
+onIgnoredFiles = "off"
+quiet = false
+rulesCustomizations = []
+run = "onType"
+useESLintClass = false
+validate = "on"
+codeAction = { disableRuleComment = { enable = true, location = "separateLine" }, showDocumentation = { enable = true } }
+codeActionOnSave = { mode = "all" }
+experimental = { }
+problems = { shortenToSingleLine = false }
+workingDirectory = { mode = "auto" }
