👌 IMPROVE: Improve visuals for Helix & QOL
Adds a keybinding for the buffer picker, adds soft-wrap and better rulers

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -8,7 +8,7 @@ auto-save = false
 completion-trigger-len = 1
 true-color = true
 color-modes = true
-rulers = [120]
+rulers = [81,82]
 idle-timeout = 50
 bufferline = "multiple"
 
@@ -23,6 +23,9 @@ select = "underline"
 [editor.indent-guides]
 render = true
 character = "▏"
+
+[editor.soft-wrap]
+enable = true
 
 [editor.lsp]
 display-messages = true
@@ -49,6 +52,7 @@ q = ":reflow"
 [keys.normal.space]
 x = ":buffer-close"
 X = ":x"
+"space" = "buffer_picker"
 
 [keys.normal.","]
 f = ":format"
