📦 NEW: Use helix for tmux shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,23 +83,23 @@ bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key h split-window -h "btm"
 
 # Quickly edit dumpfile
-bind-key P split-window -h "nvim ~/notes/braindump.md"
+bind-key P split-window -h "hx ~/notes/braindump.md"
 
 # Quickly edit maybe file
-bind-key y split-window -h "nvim ~/notes/maybe.md"
+bind-key y split-window -h "hx ~/notes/maybe.md"
 
 # Quickly edit notes/log
 # https://news.ycombinator.com/item?id=22276184
-bind-key g split-window -h "nvim  -c \"+normal GO## $(date)\" -c ':s/$/\r/' -c 'se nohlsearch' ~/notes/notes.md"
+bind-key g split-window -h "hx  -c \"+normal GO## $(date)\" -c ':s/$/\r/' -c 'se nohlsearch' ~/notes/notes.md"
 
 # Quickly edit todo file
-bind-key t split-window -h "nvim ~/notes/todo.md"
+bind-key t split-window -h "hx ~/notes/todo.md"
 
 # Quickly edit work file
-bind-key T split-window -h "nvim ~/notes/work.md"
+bind-key T split-window -h "hx ~/notes/work.md"
 
 # Quickly edit a file in your wiki
-bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
+bind-key v split-window -h -c ~/wiki "hx $(fd | fzy)"
 
 # session navigation
 bind-key C-w choose-tree
@@ -133,7 +133,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # tmux resurrect options
 set -g @resurrect-hook-pre-restore-pane-processes 'tmux switch-client -n && tmux kill-session -t 0'
-set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-hx 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux continuum options
