--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,8 +39,19 @@ unbind C-b                  # remove bind for C-b
 set-option -g prefix C-i
 bind-key -r C-i send-prefix
 
-# Restoring Clear Scren
-bind C-l send-keys 'C-l'
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -124,7 +135,6 @@ set-option -g status-interval 60
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-macos.conf' 'source ~/.tmux-linux.conf'
 
 # Plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
