--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,47 +1,46 @@
 [[language]]
-file-types = ["md"]
-indent = { tab-width = 2, unit = "  " }
-injection-regex = "md|markdown"
-language-server = { command = "marksman", args=["server"] }
-name = "markdown"
-roots = [".marksman.toml"]
-scope = "source.md"
-
-[[language]]
 name = "html"
 formatter = { command = "prettier", args = ["--parser", "html"] }
+auto-format = true
 
 [[language]]
 name = "json"
 formatter = { command = "prettier", args = ["--parser", "json"] }
+auto-format = true
 
 [[language]]
 name = "css"
 formatter = { command = "prettier", args = ["--parser", "css"] }
+auto-format = true
 
 [[language]]
 name = "scss"
 formatter = { command = "prettier", args = ["--parser", "scss"] }
+auto-format = true
 
 [[language]]
 name = "javascript"
 # language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = "prettier", args = ["--parser", "typescript"] }
+auto-format = true
 
 [[language]]
 name = "jsx"
 # language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = "prettier", args = ["--parser", "typescript"] }
+auto-format = true
 
 [[language]]
 name = "tsx"
 # language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = "prettier", args = ["--parser", "typescript"] }
+auto-format = true
 
 [[language]]
 name = "typescript"
 # language-servers = [{ name = "typescript-language-server", except-features = [ "format" ] }, { name = "eslint", except-features = [ "format" ] } ]
 formatter = { command = "prettier", args = ["--parser", "typescript"] }
+auto-format = true
 
 [language-server.eslint]
 args = ["--stdio"]
