📦 NEW: use helix for note-taking and creating a log
https://www.youtube.com/watch?v=8GQKOLh_V5E

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -99,9 +99,8 @@ bind-key P split-window -h "hx ~/notes/braindump.md"
 # Quickly edit maybe file
 bind-key y split-window -h "hx ~/notes/maybe.md"
 
-# Quickly edit notes/log
-# https://news.ycombinator.com/item?id=22276184
-bind-key g split-window -h "nvim -c \"+normal GO## $(date)\" -c ':s/$/\r/' -c 'se nohlsearch' ~/notes/notes.md"
+# Quickly edit notes/log (uses a fish shell function called notes)
+bind-key g split-window -h \; "notes"
 
 # Quickly edit todo file
 bind-key t split-window -h "hx ~/notes/todo.md"
