--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -11,6 +11,7 @@ rulers = [81,82]
 idle-timeout = 50
 bufferline = "multiple"
 line-number = "relative"
+shell = ["fish", "-c"]
 
 [editor.file-picker]
 hidden = false
@@ -57,12 +58,16 @@ esc = ["collapse_selection", "keep_primary_selection"]
 i = ["insert_mode", "collapse_selection"]
 a = ["append_mode", "collapse_selection"]
 
+C-f = [":new", ":insert-output lfp", "split_selection_on_newline", "goto_file", "goto_last_modification", "goto_last_modified_file", ":buffer-close!"]
+
+
 [keys.normal.g]
 a = "code_action"
 o = "goto_last_accessed_file"
 
 [keys.normal.space]
 "=" = ":format"
+w = ":w"
 x = ":buffer-close"
 X = ":x"
 q = ":q!"
