--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,4 +1,9 @@
 [[language]]
+name = "markdown"
+formatter = { command = "prettier", args = ["--parser", "markdown"] }
+auto-format = true
+
+[[language]]
 name = "html"
 formatter = { command = "prettier", args = ["--parser", "html"] }
 auto-format = true
