🐛 FIX: Tmux command to run shell after split pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -100,7 +100,7 @@ bind-key P split-window -h "hx ~/notes/braindump.md"
 bind-key y split-window -h "hx ~/notes/maybe.md"
 
 # Quickly edit notes/log (uses a fish shell function called notes)
-bind-key g split-window -h \; "notes"
+bind-key g split-window -h \; send-keys "notes" Enter
 
 # Quickly edit todo file
 bind-key t split-window -h "hx ~/notes/todo.md"
