📦 NEW: Keymap for compare with branch

--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -147,15 +147,16 @@ nnoremap <leader>o :action OptimizeImports<CR>
 nnoremap <leader>a :action Vcs.RollbackChangedLines<CR>
 nnoremap <leader>k :action QuickJavaDoc<CR>
 nnoremap <leader>q :action QuickTypeDefinition<CR>
+nnoremap ,a :action Annotate<CR>
 nnoremap ,f :action ReformatCode<CR>
-nnoremap ,r :action RefactoringMenu<CR>
-nnoremap ,q :action Refactorings.QuickListPopupAction<CR>
-vnoremap ,r :action RefactoringMenu<CR>
-vnoremap ,q :action Refactorings.QuickListPopupAction<CR>
-nnoremap ,p :action ReformatWithPrettierAction<CR>
+nnoremap ,h :action LocalHistory.ShowHistory<CR>
+nnoremap ,k :action Git.CompareWithBranch<CR>
 nnoremap ,l :action RecentLocations<CR>
-nnoremap ,h  :action LocalHistory.ShowHistory<CR>
-nnoremap ,a  :action Annotate<CR>
+nnoremap ,p :action ReformatWithPrettierAction<CR>
+nnoremap ,q :action Refactorings.QuickListPopupAction<CR>
+nnoremap ,r :action RefactoringMenu<CR>
+vnoremap ,q :action Refactorings.QuickListPopupAction<CR>
+vnoremap ,r :action RefactoringMenu<CR>
 nnoremap ]d :action GotoNextError<CR>
 nnoremap [d :action GotoPreviousError<CR>
 nnoremap ge :action ShowErrorDescription<CR>
