👌 IMPROVE: Update brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,4 +1,5 @@
 tap "eth-p/software"
+tap "he3-app/he3"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
@@ -17,11 +18,13 @@ brew "qemu"
 brew "lima"
 brew "colima"
 brew "coreutils"
+brew "cpanminus"
 brew "curlie"
 brew "detox"
 brew "difftastic"
 brew "docker"
 brew "docker-credential-helper"
+brew "dprint"
 brew "exa"
 brew "fd"
 brew "harfbuzz"
@@ -35,7 +38,10 @@ brew "gawk"
 brew "gh"
 brew "git"
 brew "git-delta"
+brew "git-filter-repo"
+brew "gitui"
 brew "glow"
+brew "gnu-sed"
 brew "go"
 brew "gopls"
 brew "gotify"
@@ -44,10 +50,14 @@ brew "grip"
 brew "hadolint"
 brew "helix"
 brew "hugo"
+brew "jdtls"
 brew "jq"
 brew "jql"
 brew "kubernetes-cli"
+brew "lazygit"
+brew "lf"
 brew "libpq"
+brew "llvm"
 brew "ltex-ls"
 brew "luv"
 brew "lychee"
@@ -62,6 +72,7 @@ brew "onefetch"
 brew "pass"
 brew "pipx"
 brew "procs"
+brew "rename"
 brew "ripgrep"
 brew "rust"
 brew "rust-analyzer"
@@ -89,25 +100,34 @@ cask "adguard"
 cask "adobe-digital-editions"
 cask "alfred"
 cask "alt-tab"
+cask "android-platform-tools"
+cask "android-sdk"
+cask "appcleaner"
 cask "brave-browser"
+cask "breaktimer"
 cask "calibre"
 cask "dash"
 cask "element"
 cask "figma"
 cask "firefox-developer-edition"
 cask "font-jetbrains-mono-nerd-font"
+cask "gitkraken"
+cask "handbrake"
+cask "he3"
 cask "hyperkey"
 cask "insomnia"
 cask "insync"
 cask "jetbrains-toolbox"
 cask "jitsi-meet"
+cask "karabiner-elements"
 cask "keka"
 cask "keyboardcleantool"
 cask "kitty"
+cask "knockknock"
 cask "macdown"
+cask "meld"
 cask "michaelvillar-timer"
 cask "microsoft-auto-update"
-cask "microsoft-edge"
 cask "microsoft-teams"
 cask "mos"
 cask "notunes"
@@ -115,7 +135,6 @@ cask "numi"
 cask "pdfsam-basic"
 cask "rectangle-pro"
 cask "remarkable"
-cask "shortcat"
 cask "sioyek"
 cask "skype"
 cask "zoom"
