--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -51,14 +51,16 @@ esc = ["collapse_selection", "keep_primary_selection"]
 # Maps the enter key to move to start of next line
 "ret" = ["move_line_down", "goto_first_nonwhitespace"]
 # Change everything from the cursor to the end of the line
-"A-l" = ["collapse_selection", "select_mode", "goto_line_end", "change_selection"]
+A-l = ["collapse_selection", "select_mode", "goto_line_end", "change_selection"]
 # Delete from cursor to line end
-"A-L" = ["extend_to_line_end", "yank", "select_mode", "goto_line_end", "delete_selection"]
+A-L = ["extend_to_line_end", "yank", "select_mode", "goto_line_end", "delete_selection"]
+A-j = "join_selections"
 
 i = ["insert_mode", "collapse_selection"]
 a = ["append_mode", "collapse_selection"]
 
 C-f = [":new", ":insert-output lfp", "split_selection_on_newline", "goto_file", "goto_last_modification", "goto_last_modified_file", ":buffer-close!"]
+C-g = ":sh tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% -h80% -E lazygit"
 
 
 [keys.normal.g]
@@ -66,6 +68,7 @@ a = "code_action"
 o = "goto_last_accessed_file"
 
 [keys.normal.space]
+"\\" = ":reload-all"
 "=" = ":format"
 w = ":w!"
 x = ":buffer-close!"
@@ -128,8 +131,3 @@ A-O = "open_above"
 C-a = ["collapse_selection", "insert_at_line_start"]
 # Jump to end of line to append
 C-e = ["collapse_selection", "insert_at_line_end"]
-
-# Insert "macros"
-[keys.insert."\\"]
-h = ["normal_mode", ":insert-output echo '=>'", "collapse_selection", "insert_at_line_end"]
-n = ["normal_mode", ":insert-output echo '->'", "collapse_selection", "insert_at_line_end"]
