🐛 FIX: Use less as pager for delta to avoid erase in line ansi error

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,6 +18,7 @@
   external = difft
   tool = meld
 [delta]
+  pager = less
   features = side-by-side line-numbers decorations
   whitespace-error-style = 22 reverse
   inspect-raw-lines = false
