📦 NEW: Update brewfile & nvim lazy-lock

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -24,6 +24,7 @@ brew "detox"
 brew "difftastic"
 brew "docker"
 brew "docker-credential-helper"
+brew "dotnet"
 brew "dprint"
 brew "exa"
 brew "fd"
@@ -45,7 +46,6 @@ brew "gnu-sed"
 brew "go"
 brew "gopls"
 brew "gotify"
-brew "python@3.10"
 brew "grip"
 brew "hadolint"
 brew "helix"
@@ -72,6 +72,7 @@ brew "onefetch"
 brew "pass"
 brew "pipx"
 brew "procs"
+brew "python@3.10"
 brew "rename"
 brew "ripgrep"
 brew "rust"
@@ -100,6 +101,7 @@ cask "adguard"
 cask "adobe-digital-editions"
 cask "alfred"
 cask "alt-tab"
+cask "amethyst"
 cask "android-platform-tools"
 cask "android-sdk"
 cask "appcleaner"
