🐛 FIX: Expand tilde for location of language server
https://github.com/helix-editor/helix/issues/5538

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,6 +1,6 @@
 [[language]]
 name = "c-sharp"
-language-server = { command = "dotnet", args = [ "/Users/owlhoot/.local/bin/omnisharp/Omnisharp.dll", "--languageserver" ] }
+language-server = { command = "fish", args = [ "-c", "dotnet ~/.local/bin/omnisharp/Omnisharp.dll --languageserver" ] }
 
 [[language]]
 name = "markdown"
