--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -66,6 +66,7 @@ a = ["append_mode", "collapse_selection"]
 
 C-f = [":new", ":insert-output lfp", "split_selection_on_newline", "goto_file", "goto_last_modification", "goto_last_modified_file", ":buffer-close!"]
 C-g = ":sh tmux popup -d \"#{pane_current_path}\" -xC -yC -w80% -h80% -E lazygit"
+A-d = ":insert-output date"
 
 [keys.normal.g]
 a = "code_action"
