👌 IMPROVE: Remove todo file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -99,11 +99,8 @@ bind-key P split-window -h "hx ~/notes/braindump.md"
 # Quickly edit maybe file
 bind-key y split-window -h "hx ~/notes/maybe.md"
 
-# Quickly edit notes/log (uses a fish shell function called notes)
-bind-key g split-window -h "hx ~/notes/NOTES.md"
-
-# Quickly edit todo file
-bind-key t split-window -h "hx ~/notes/todo.md"
+# Quickly edit todo/notes file
+bind-key t split-window -h "hx ~/notes/NOTES.md"
 
 # Quickly edit work file
 bind-key T split-window -h "hx ~/notes/work.md"
