--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family Lotion
-font_size 14.0
+font_family JetBrains Mono NL
+font_size 13.0
 adjust_line_height 120%
 
 allow_remote_control yes
