🐛 FIX: Install Jetbrains Mono font via Homebrew

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -73,6 +73,7 @@ cask "alfred"
 cask "alt-tab"
 cask "amethyst"
 cask "dropbox"
+cask "font-jetbrains-mono"
 cask "jetbrains-toolbox"
 cask "karabiner-elements"
 cask "keka"
@@ -83,5 +84,4 @@ cask "meld"
 cask "notunes"
 cask "remarkable"
 cask "sioyek"
-cask "superkey"
 cask "spotify"
