👌 IMPROVE: Update Brewfile

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -6,6 +6,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "oven-sh/bun"
 tap "tankerhq/repo"
+brew "arc"
 brew "bash"
 brew "bat"
 brew "bit-git"
