--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
-font_family JetBrains Mono NL SemiBold
+font_family JetBrains Mono SemiBold
 font_size 13.0
 adjust_line_height 120%
+disable_ligatures cursor
 
 allow_remote_control yes
 enable_audio_bell no
