👌 IMPROVE: remove fullscreen
Try mixing rectangle pro & amethyst for window management.

Recatangle has a shortcut for fullscreen, so Amethyst's
is not needed.

--- a/amethyst/.amethyst.yml
+++ b/amethyst/.amethyst.yml
@@ -16,7 +16,7 @@
 # layouts - Ordered list of layouts to use by layout key (default tall, wide, fullscreen, and column).
 layouts:
   - tall
-  - fullscreen
+  # - fullscreen
   # - tall-right
   - wide
   # - two-pane
