👌 IMPROVE: Rollback to neovim as default term editor

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,19 +94,19 @@ bind-key S display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key h split-window -h "btm"
 
 # Quickly edit dumpfile
-bind-key P split-window -h "hx ~/notes/braindump.md"
+bind-key P split-window -h "nvim ~/notes/braindump.md"
 
 # Quickly edit maybe file
-bind-key y split-window -h "hx ~/notes/maybe.md"
+bind-key y split-window -h "nvim ~/notes/maybe.md"
 
 # Quickly edit todo/notes file
-bind-key t split-window -h "hx ~/notes/NOTES.md"
+bind-key t split-window -h "nvim ~/notes/NOTES.md"
 
 # Quickly edit work file
-bind-key T split-window -h "hx ~/notes/work.md"
+bind-key T split-window -h "nvim ~/notes/work.md"
 
 # Quickly edit a file in your wiki
-bind-key v split-window -h -c ~/wiki "hx $(fd | fzy)"
+bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
 
 # session navigation
 bind-key C-w choose-tree
