🐛 FIX: kitty: Jetbrains Mono Nerd Font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family      JetBrainsMono Nerd Font SemiBold
-bold_font        JetBrainsMono Nerd Font Bold
-italic_font      JetBrainsMono Nerd Font SemiBold Italic
-bold_italic_font JetBrainsMono Nerd Font Bold Italic
+font_family      JetBrainsMono Nerd Font Mono SemiBold
+bold_font        JetBrainsMono Nerd Font Mono Bold
+italic_font      JetBrainsMono Nerd Font Mono SemiBold Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
 font_size 13.0
 adjust_line_height 120%
 disable_ligatures cursor
