👌 IMPROVE: Add all webstorm bins to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ bin/.local/share
 bin/.local/scripts/goland
 bin/.local/scripts/rider
 bin/.local/scripts/idea
-bin/.local/scripts/webstorm
+bin/.local/scripts/webstorm*
 bin/.local/scripts/datagrip
 
