👌 IMPROVE: Better keymaps for tmux session switching

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -103,7 +103,8 @@ bind-key t split-window -h "nvim ~/notes/NOTES.md"
 bind-key v split-window -h -c ~/wiki "nvim $(fd | fzy)"
 
 # session navigation
-bind-key C-w choose-tree
+bind w display-popup -E "tmux-sessionizer"
+bind-key C-w choose-tree -swZ
 
 # Breaking out session
 bind-key C-b send-keys 'tat && exit' 'C-m'
