--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -136,7 +136,7 @@ nnoremap <leader>zo :action ExpandAllRegions<CR>
 nnoremap <leader>c :action CommentByLineComment<CR>
 nnoremap <leader>r :action RecentFiles<CR>
 nnoremap <leader>f :action GotoFile<CR>
-nnoremap <leader>g :action Generate<CR>
+nnoremap <leader>gn :action Generate<CR>
 nnoremap <leader>h :action TogglePopupHints<CR>
 nnoremap <leader>s :action SaveAll<CR>
 nnoremap <leader>l :action Stylelint.Fix<CR>
@@ -144,7 +144,6 @@ nnoremap <leader>a :action Vcs.RollbackChangedLines<CR>
 nnoremap <leader>= :action ReformatCode<CR>
 nnoremap ,a :action Annotate<CR>
 nnoremap ,h :action LocalHistory.ShowHistory<CR>
-nnoremap ,k :action Git.CompareWithBranch<CR>
 nnoremap ,l :action RecentLocations<CR>
 nnoremap ,p :action ReformatWithPrettierAction<CR>
 nnoremap ,q :action Refactorings.QuickListPopupAction<CR>
@@ -169,6 +168,11 @@ nnoremap <leader>qf :action ShowIntentionActions<CR>
 nnoremap <leader>qd :action QuickJavaDoc<CR>
 nnoremap <leader>qt :action QuickTypeDefinition<CR>
 nnoremap <leader>qi :action QuickImplementations<CR>
+""" Git -------------
+nnoremap ,k :action Git.CompareWithBranch<CR>
+map <leader>gc <Action>(CheckinProject)
+map <leader>gs <Action>(ActivateVersionControlToolWindow)
+map <leader>gb <Action>(Git.Branches)
 """ Popup navigation -------------------
 inoremap <C-j> <Action>(PopupMenu-selectNext)
 inoremap <C-k> <Action>(PopupMenu-selectPrev)
@@ -188,6 +192,7 @@ nnoremap <leader>fc :action GotoClass<CR>
 nnoremap <leader>fa :action GotoAction<CR>
 nnoremap <leader>fg :action FindInPath<CR>
 nnoremap <leader>fr :action ReplaceInPath<CR>
+nnoremap <leader>fs :action NewScratchFile<CR>
 nnoremap gi :action GotoImplementation<CR>
 nnoremap gd :action GotoDeclaration<CR>
 nnoremap gp :action GotoSuperMethod<CR>
